# hovellas

./: build_all.bat  savegame.json
assets/: characters.json
src/cpp/: EventManager.h  GameStateManager.h  RaycastSystem.h  main.cpp
src/data/: chapter1.txt  quests.json
src/dotnet/: DialogueEngine.cs  EvidenceAnalyzer.cs  EvidenceManager.cs  SuspectManager.cs
src_cpp/: CMakeLists.txt
src_cpp/include/: InputHandler.h  StoryParser.h  bridge.h  game_state.h  scene_manager.h
src_cpp/src/: Engine.cpp  InputHandler.cpp  Renderer3D.cpp  StoryParser.cpp  bridge.cpp  highlight.cpp  scene_manager.cpp
src_net/: App.xaml.cs  DialogWindow.xaml  DialogWindow.xaml.cs  EvidenceBoardWindow.xaml  EvidenceBoardWindow.xaml.cs  HovellasUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
